--- a/perla-metro-api-main.csproj
+++ b/perla-metro-api-main.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>perla_metro_api_main</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Ocelot" Version="24.0.1" />
+  </ItemGroup>
+
 </Project>
