--- a/perla-metro-api-main.csproj
+++ b/perla-metro-api-main.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotNetEnv" Version="3.1.1" />
     <PackageReference Include="Ocelot" Version="24.0.1" />
   </ItemGroup>
 
