--- a/perla-metro-api-main.csproj
+++ b/perla-metro-api-main.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.9" />
     <PackageReference Include="Ocelot" Version="24.0.1" />
   </ItemGroup>
 
